HW3 - Functionele Decorator

--- a/Huiswerk3/CMakeLists.txt
+++ b/Huiswerk3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Huiswerk3)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Huiswerk3 main.cpp)
+add_executable(Huiswerk3 main.cpp Decorator.cpp Shaman.cpp Farmer.cpp Soldier.cpp NPC.cpp)
